# advent-of-code-2022

./: .gitignore  README.md  pyproject.toml  renovate.json
.github/workflows/: main.yml
inputs/day02/task2/: example1.txt  example2.txt
inputs/day08/: example1.txt
src/aoc/: cli.py  spi.py
src/aoc/day01/: __init__.py  tasks.py
src/aoc/day02/: __init__.py  common.py  task1.py  task2.py
src/aoc/day03/: __init__.py
src/aoc/day04/: __init__.py
src/aoc/day05/: __init__.py
src/aoc/day06/: __init__.py
src/aoc/day07/: __init__.py
src/aoc/day08/: __init__.py
src/aoc/day09/: __init__.py
src/aoc/day10/: __init__.py
src/aoc/day11/: __init__.py
src/tests/aoc/: example.py
src/tests/aoc/day01/: test_task1.py  test_task2.py
src/tests/aoc/day02/: test_task1.py  test_task2.py
src/tests/aoc/day03/: test_task1.py  test_task2.py
src/tests/aoc/day04/: test_task1.py  test_task2.py
src/tests/aoc/day05/: test_task1.py  test_task2.py
src/tests/aoc/day06/: test_task1.py  test_task2.py
src/tests/aoc/day07/: test_task1.py  test_task2.py
src/tests/aoc/day08/: test_task1.py  test_task2.py
src/tests/aoc/day09/: test_task1.py  test_task2.py
src/tests/aoc/day10/: test_task1.py  test_task2.py
src/tests/aoc/day11/: test_task1.py  test_task2.py
