[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Björn Petersen <git@bjoernpetersen.net>"]
readme = "README.md"

[tool.poetry.scripts]
aoc = "aoc.cli:main"

[tool.poetry.dependencies]
python = "~3.11"
more-itertools = "^9.0.0"
click = "^8.1.3"
portion = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "0.991"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "portion"
ignore_missing_imports = true
